# tallytime

./: LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: push.yml
.trunk/: actions  logs  notifications  out  trunk.yaml
.trunk/plugins/: trunk
tallytime/: __init__.py  __main__.py  _utils.py  exceptions.py  loggers.py  settings.py  tally_log.py  tally_session.py
